--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-joyride": "^2.2.1",
     "react-leaflet": "^2.6.1",
     "react-numeric-input": "~2.2.3",
+    "react-otp-input": "^2.4.0",
     "react-paginate": "~6.3.2",
     "react-perfect-scrollbar": "^1.5.5",
     "react-redux": "~7.1.3",
